--- a/project.json
+++ b/project.json
@@ -12,7 +12,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "21.10.0.0",
-  "projectVersion": "1.0.24",
+  "projectVersion": "1.0.25",
   "runtimeOptions": {
     "autoDispose": false,
     "isPausable": true,
@@ -41,12 +41,30 @@
     "fileInfoCollection": [],
     "modernBehavior": false
   },
+  "arguments": {
+    "input": [
+      {
+        "name": "in_ConfigFilePath",
+        "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+        "required": false,
+        "hasDefault": true
+      }
+    ],
+    "output": []
+  },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
       "filePath": "Main.xaml",
       "uniqueId": "03384b2d-2ee2-4e04-9b65-a8a957f968d9",
-      "input": [],
+      "input": [
+        {
+          "name": "in_ConfigFilePath",
+          "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+          "required": false,
+          "hasDefault": true
+        }
+      ],
       "output": []
     }
   ],
