--- a/project.json
+++ b/project.json
@@ -41,30 +41,12 @@
     "fileInfoCollection": [],
     "modernBehavior": false
   },
-  "arguments": {
-    "input": [
-      {
-        "name": "in_ConfigFilePath",
-        "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
-        "required": false,
-        "hasDefault": true
-      }
-    ],
-    "output": []
-  },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
       "filePath": "Main.xaml",
       "uniqueId": "03384b2d-2ee2-4e04-9b65-a8a957f968d9",
-      "input": [
-        {
-          "name": "in_ConfigFilePath",
-          "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
-          "required": false,
-          "hasDefault": true
-        }
-      ],
+      "input": [],
       "output": []
     }
   ],
